Update colors and z-index, fix small css issues

--- a/front/vue/index.css
+++ b/front/vue/index.css
@@ -8,6 +8,11 @@
     --primary-dark: #229082;
     --primary-darker: #1e8174;
     --primary-focus: rgb(40 166 150 / 50%);
+    --secondary: #1761b5;
+    --secondary-dark: #14549d;
+    --secondary-darker: #114b8d;
+    --secondary-focus: rgb(23 97 181 / 50%);
+    --secondary-hover: rgb(23 97 181 / 20%);
     --tertiary-dark: #2c41fb;
     --tertiary-darker: #0f26fa;
     --tertiary-focus: rgb(88 105 252 / 50%);
@@ -16,6 +21,11 @@
     --alert-focus: rgb(227 43 43 / 50%);
     /* text on all filled buttons */
     --button-text: #ffffff;
+
+    /* task colors */
+    --initiated: #f2c94c;
+    --in-progress: #1761b5;
+    --completed: #219653;
 
     /* tag colors */
     --tag-0: #c6c4c4;
@@ -61,23 +71,21 @@
     --background-alert: #f8caca;
 
     /* z-index layers */
-    --segmented-button-focus-z: 1;
-    --table-actions-z: 2;
-    --taggroup-overflow-z: 3;
-    --sidebar-backdrop-z: 4;
-    --sidebar-container-z: 5;
-    --sidebar-z: 6;
-    --modal-backdrop-z: 7;
-    --modal-z: 8;
-    --toast-z: 9;
+    --editor-toolbar-z: 1;
+    --editor-global-toolbar-z: 2;
+    --editor-nav-z: 3;
+    --global-nav-z: 4;
+    --segmented-button-focus-z: 5;
+    --table-actions-z: 6;
+    --taggroup-overflow-z: 7;
+    --sidebar-backdrop-z: 8;
+    --sidebar-container-z: 9;
+    --sidebar-z: 10;
+    --modal-backdrop-z: 11;
+    --modal-z: 12;
+    --toast-z: 13;
 }
 .light-mode {
-    /* button colors */
-    --secondary: #1761b5;
-    --secondary-dark: #14549d;
-    --secondary-darker: #114b8d;
-    --secondary-focus: rgb(23 97 181 / 50%);
-    --secondary-hover: rgb(23 97 181 / 20%);
     /* light mode backgrounds */
     --background: #f0f0f0;
     --background1: #ffffff;
@@ -95,12 +103,6 @@
     --toast-text: #ffffff;
 }
 .dark-mode {
-    /* button colors */
-    --secondary: #4f96e8;
-    --secondary-dark: #2b80e3;
-    --secondary-darker: #1c72d6;
-    --secondary-focus: rgb(79 150 232 / 50%);
-    --secondary-hover: rgb(79 150 232 / 20%);
     /* dark mode backgrounds */
     --background: #212323;
     --background1: #2f3132;
@@ -124,6 +126,8 @@
     flex-flow: row nowrap;
     align-items: stretch;
     height: 100vh;
+    overflow-y: hidden;
+    max-height: 100vh;
 }
 .escr-body main {
     max-height: 100vh;
@@ -200,12 +204,11 @@
     font-style: normal;
 }
 /* tooltip/menu arrows restyling */
-.escr-body .v-popper__popper .v-popper__arrow-inner {
+.escr-body .v-popper__popper .v-popper__arrow-inner,
+.escr-body .v-popper__popper .v-popper__arrow-outer {
     border-color: var(--background1);
 }
-.escr-body .v-popper__popper .v-popper__arrow-outer {
-    border-color: var(--background2);
-}
+
 /* global nav layout styles */
 #vue-global-nav {
     height: 100vh;
@@ -290,7 +293,8 @@
 }
 
 /* tooltip styling */
-.v-popper--theme-escr-tooltip .v-popper__inner {
+.v-popper--theme-escr-tooltip .v-popper__inner,
+.v-popper--theme-escr-tooltip-small .v-popper__inner {
     background: var(--background1);
     border-radius: 15px;
     padding: 16px;
@@ -299,11 +303,9 @@
     max-width: 220px;
     font-size: 12px;
 }
-.v-popper--theme-escr-tooltip .v-popper__arrow-inner {
-    border-color: var(--background1);
-}
-.v-popper--theme-escr-tooltip .v-popper__arrow-outer {
-    border-color: var(--background2);
+.v-popper--theme-escr-tooltip-small .v-popper__inner {
+    padding: 8px;
+    border-radius: 8px;
 }
 
 /* spinner (adapted from bootstrap) */
